fixed the alignment of header using flex

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -2,9 +2,11 @@
 @import '../../styling/media-queries';
 
 .HeaderComponent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: $teal-blue;
     color: white;
-    display: table;
     font-size: 1.2rem;
     padding-left: 1rem;
     position: fixed;
@@ -12,21 +14,13 @@
     height: 15%;
 
     @include from-small() {
-        display: flex;
         justify-content: space-around;
         position: relative;
     }
 
     .logo {
-        display: table-cell;
         font-size: 1.5rem;
         font-weight: bold;
-        text-align: center;
-        vertical-align: middle;
-
-        @include from-small() {
-            align-self: center;
-        }
     }
 
     .nav-items {
@@ -41,7 +35,6 @@
         @include from-small() {
             all: unset;
             transform: scale(1, 1);
-            align-self: center;
             padding-right: 1rem;
         }
 
@@ -85,12 +78,12 @@
     }
 
     .hamburger {
+        display: flex;
+        justify-content: center;
         align-items: center;
         background-color: transparent;
         border: transparent;
-        display: flex;
         height: 100%;
-        justify-content: center;
         left: 0;
         position: absolute;
         top: 0;
